removed unnecessary classes, added comments to style.css

--- a/people.html
+++ b/people.html
@@ -51,7 +51,7 @@
   <div class='flex-people'>
     <div class= "bioblock">
       <!-- edited by Kate -->
-      <img class="image bioimage bioimagesmall" src="images/KateHeadshot.jpg"  alt="Kate" width="200" height="300">
+      <img class="image bioimage" src="images/KateHeadshot.jpg"  alt="Kate" width="200" height="300">
 
       <h4>Kate</h4>
       <p class="biotext">Kate has an MSc from Carleton University and thinks that geology is the schist. Her favourite mineral is Halite because she too is a bit
@@ -67,7 +67,7 @@
     </div>
     <!-- End of Kate edits -->
     <div class= "bioblock">
-      <img class="w3-image bioimage" src="images/MarkHeadshot.jpg"  alt="Mark" width="200" height="300">
+      <img class="image bioimage" src="images/MarkHeadshot.jpg"  alt="Mark" width="200" height="300">
       <h4>Mark</h4>
       <p class="biotext">Mark received a BSc in Wildlife Biology from the University of Guelph, and has surveyed birds in bogs, deserts, 
         mountains, and mudflats over the past 10 years. Bird really is the word, and when his study subjects fly south for the winter he's often 
