--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
 
     </div>
 
-  <!-- modified by Kazuto; navbar now displays on right side of screen, elements are vertically aligned-->
+  <!-- modified by Kazuto-->
   <!-- Navbar on small screens -->
     <div class='left'>
       <div id="SmallNavBar" class="bar-block light-grey hide hide-large hide-medium large">
