updates to projects

--- a/projects.html
+++ b/projects.html
@@ -200,14 +200,15 @@ end menu medium screen-->
     <div class="content">
       <div class="padding-bottom">
         <h1 class='anchor'>Spatial Analysis</h1>
-        <p>
-          <ul>
-            <li>Model building and workflow design</li>
-            <li>Mulit-criteria analysis</li>
-            <li>Digitizing</li>
-            <li>Whatever you'd like us to do, we can probably do it</li>            
-          </ul>
+        <p>Our spatial analysis division can conduct risk assessment and site suitability analyses for all of your environmental and
+          municipal needs. Examples of our past projects include: 
         </p>
+        <ul>
+          <li>Watermain Break Risk Analysis</li>
+          <li>Flood Plain Analysis</li>
+          <li>Building Suitability Studies</li>
+          <li>Environmental Risk Analysis</li>            
+        </ul>
       </div>
     </div>
   </div>
