--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div>
         <h2>Welcome</h2>
 
-        <p class="biotext">Cloud 9 Consulting is a GIS consulting company based in Ontario. We provide consulting services to 
+        <p>Cloud 9 Consulting is a GIS consulting company based in Ontario. We provide consulting services to 
           private industry and the public service sector. We have a range of specialties including Remote Sensing and Image Analysis,
           Spatial Analysis, and Cartographic Solutions. For our full range of services and examples of past projects please visit our
           projects page. Formed in 2020, Cloud 9 Consulting was born out of a desire to pass GEOM 101 Web Design and Programming. Our three
