updates to projects spatial analysis

--- a/projects.html
+++ b/projects.html
@@ -209,6 +209,9 @@ end menu medium screen-->
           <li>Building Suitability Studies</li>
           <li>Environmental Risk Analysis</li>            
         </ul>
+        <p>Our team can sort through your topographic maps, aerial imagery, and tabular data to produce meaningful spatial
+          analyses based on your specifications. Please contact us for more information on how we can help.
+        </p>
       </div>
     </div>
   </div>
