updates to projects and people footer

--- a/people.html
+++ b/people.html
@@ -89,9 +89,7 @@
   </div> 
 
 
-  <div class="container black center">
-    <h1 class="margin xlarge">Footer</h1>
-  </div>
+  <div class="light-grey container center"></div>
 
   <!-- Footer -->
   <footer class="container center">  
