--- a/projects.html
+++ b/projects.html
@@ -196,7 +196,7 @@ end menu medium screen-->
 <!--end Mark-->
 
   <!-- GEOM 103-->
-  <div class="container" id='spatial'>
+  <div class="light-grey container" id='spatial'>
     <div class="content">
       <div class="padding-bottom">
         <h1 class='anchor'>Spatial Analysis</h1>
@@ -217,7 +217,7 @@ end menu medium screen-->
   </div>
 
   <!-- GEOM 102-->
-  <div class="light-grey container" id='geovis'>
+  <div class="container" id='geovis'>
     <div class="content">
       <div class="padding-bottom">
         <h1 class='anchor'>Geovisualization</h1>
@@ -233,7 +233,7 @@ end menu medium screen-->
   </div>
 
   <!-- GEOM 65-->
-  <div class="container" id='database'>
+  <div class="light-grey container" id='database'>
     <div class="content">
       <div class="padding-bottom">
         <h1 class='anchor'>Database Modeling</h1>
@@ -248,7 +248,7 @@ end menu medium screen-->
   </div>
 
   <!-- GEOM 66-->
-  <div class="light-grey container" id='remote'>
+  <div class="container" id='remote'>
     <div class="content">
       <div class="padding-bottom">
         <h1 class='anchor'>Remote Sensing</h1>
@@ -264,7 +264,7 @@ end menu medium screen-->
   </div>
 
   <!-- SURV 21-->
-  <div class="container bottom-anchor" id='survey'>
+  <div class="light-grey container bottom-anchor" id='survey'>
     <div class="content">
       <div>
         <h1 class='anchor'>Surveying</h1>
@@ -277,7 +277,7 @@ end menu medium screen-->
   </div>
 
   <!-- GEOM 101-->
-  <div class="light-grey container" id='webdesign'>
+  <div class="container" id='webdesign'>
     <div class="content">
       <div class="padding-bottom">
         <h1 class='anchor'>Web Design</h1>
@@ -291,9 +291,7 @@ end menu medium screen-->
     </div>
   </div>
 
-  <div class="container black center">
-    <h1 class="margin xlarge">Footer</h1>
-  </div>
+  <div class="light-grey container center"></div>
 
   <!-- Footer -->
   <footer class="container center">  
