updates to people and projects

--- a/people.html
+++ b/people.html
@@ -89,7 +89,9 @@
   </div> 
 
 
-  <div class="light-grey container center"></div>
+  <div class="container light-grey center">
+      <h1 class="margin xlarge"></h1>
+  </div>
 
   <!-- Footer -->
   <footer class="container center">  
