--- a/projects.html
+++ b/projects.html
@@ -52,6 +52,7 @@
     <!-- menu for large screen-->
     <!--modified by Mark Dec 4, 2020-->
   <!-- owner: Kazuto-->
+  <p>Projects Quick Access</p>
   <div class='content center hide-small'>
     <div class='flex'>
       <div class='thirdWidth'>Spatial Analysis</div>
@@ -195,6 +196,7 @@ end menu medium screen-->
 <!--end menu small screen-->
 <!--end Mark-->
 
+<!-- Owner: Kate -->
   <!-- GEOM 103-->
   <div class="light-grey container" id='spatial'>
     <div class="content">
@@ -215,6 +217,7 @@ end menu medium screen-->
       </div>
     </div>
   </div>
+<!-- end of Owner: Kate -->
 
   <!-- GEOM 102-->
   <div class="container" id='geovis'>
@@ -291,7 +294,9 @@ end menu medium screen-->
     </div>
   </div>
 
-  <div class="light-grey container center"></div>
+  <div class="container light-grey center">
+      <h1 class="margin xlarge"></h1>
+  </div>
 
   <!-- Footer -->
   <footer class="container center">  
