--- a/projects.html
+++ b/projects.html
@@ -52,8 +52,8 @@
     <!-- menu for large screen-->
     <!--modified by Mark Dec 4, 2020-->
   <!-- owner: Kazuto-->
-  <p>Projects Quick Access</p>
   <div class='content center hide-small'>
+    <h2>Projects Quick Access</h2>
     <div class='flex'>
       <div class='thirdWidth'>Spatial Analysis</div>
       <div class='thirdWidth'>Geovisualization</div>
