Projects Remote Sensing and Geovis

--- a/projects.html
+++ b/projects.html
@@ -224,12 +224,10 @@ end menu medium screen-->
     <div class="content">
       <div class="padding-bottom">
         <h1 class='anchor'>Geovisualization</h1>
-        <p>
-          <ul>
-            <li>Reference or Thematic mapping solutions</li>
-            <li>Suitable for reports, presentations, or displays</li>
-            <li>Physical or digital medium</li>
-          </ul>
+        <p>Our cartography specialists can prepare a variety of reference or thematic maps for reporting, 
+          presentations, or displays. We can adapt our maps to suit digital or physical presentation media and
+           are able to generalize your data to suit small format for printouts or pamphlets. Talk to us about 
+           your cartographic needs, and we will find ways to present your data clearly and attractively.
         </p>
       </div>
     </div>
@@ -240,12 +238,10 @@ end menu medium screen-->
     <div class="content">
       <div class="padding-bottom">
         <h1 class='anchor'>Database Modeling</h1>
-        <p>
           <ul>
             <li>Database creation or improvement</li>
             <li>Attempt to reduce normal form violation</li>
           </ul>
-        </p>
       </div>
     </div>
   </div>
@@ -255,13 +251,15 @@ end menu medium screen-->
     <div class="content">
       <div class="padding-bottom">
         <h1 class='anchor'>Remote Sensing</h1>
-        <p>
-          <ul>
-            <li>Georeferencing of imagery</li>
-            <li>Filtering</li>
-            <li>Image Classification</li>
-          </ul>
+        <p>We have experience working with all manner of aerial and satellite imagery. Our expertise includes working with:
         </p>
+          <ul>
+            <li>Spectral Index interpretation</li>
+            <li>Geocorrection and Orthorectification</li>
+            <li>Photogrammetry</li>
+            <li>Multispectral Image Classification (Supervised and Unsupervised)</li>
+            <li>Image Enhancement</li>
+          </ul>
       </div>
     </div>
   </div>
