--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
     <div class="content text-centered">
       <div>
         <h2>How can we help?</h2>
+        <p></p>
+      </div>
+
       <div>
         <div class="padding-large">
           <a href="projects.html#geovis">
@@ -99,7 +102,7 @@
   </div>
 
   <div class="container light-grey center">
-      <h1 class="margin xlarge"></h1>
+      <h4 class="margin xlarge">Cloud 9 Consulting</h4>
   </div>
 
   <!-- Footer -->
