added "Contact Information" button for every member

--- a/people.html
+++ b/people.html
@@ -60,7 +60,7 @@
           When Kate grows up she hopes to become a GIS Applications Specialist.</p>
           
         <div class='dropBox'>
-          <button onclick='dropdown()' class='dropContact'>Contact Information</button>
+          <button id='kateButton' onclick='dropdownKate()' class='dropContact'>Contact Information</button>
           <div id='kateEmail' class='emailBox'>kate@email.com</div>
         </div>
       </div>
@@ -73,6 +73,10 @@
           followed them, guiding tourists in the Neotropics. While the life of the nomad is great, living out of a backpack and not 
           showering only lasts so long, so now he's turned to GIS to analyze the type of data he loves to collect.
         </p>
+        <div class='dropBox'>
+          <button id='markButton' onclick='dropdownMark()' class='dropContact'>Contact Information</button>
+          <div id='markEmail' class='emailBox'>kate@email.com</div> 
+        </div>
       </div>
       <div class= "bioblock">
         <!-- edited by Kazuto-->
@@ -83,6 +87,10 @@
           Likes: rock climbing, camping, piano, gaming, beer, tea. Dislikes: raisin cookies, people pronouncing "gif" with a j sound, stepping in a small 
           puddle of water on your kitchen floor and getting one sock wet. Awful experience. Wouldn't wish it on anyone.
         </p>
+        <div class='dropBox'>
+          <button id='kazutoButton' onclick='dropdownKazuto()' class='dropContact'>Contact Information</button>
+          <div id='kazutoEmail' class='emailBox'>kgilling@flemingcollege.ca</div>
+        </div>
       </div>
       <!-- end of Kazuto edit-->
     </div>
