fix html errors on projects and people

--- a/people.html
+++ b/people.html
@@ -90,7 +90,7 @@
 
 
   <div class="container light-grey center">
-      <h1 class="margin xlarge"></h1>
+      <h4 class="margin xlarge">Cloud 9 Consulting</h4>
   </div>
 
   <!-- Footer -->
