--- a/projects.html
+++ b/projects.html
@@ -293,7 +293,7 @@ end menu medium screen-->
   </div>
 
   <div class="container light-grey center">
-      <h1 class="margin xlarge"></h1>
+      <h1 class="margin xlarge">Cloud 9 Consulting</h1>
   </div>
 
   <!-- Footer -->
