updated email addresses

--- a/people.html
+++ b/people.html
@@ -61,7 +61,7 @@
           
         <div class='dropBox'>
           <button id='kateButton' onclick='dropdownKate()' class='dropContact'>Contact Information</button>
-          <div id='kateEmail' class='emailBox'>kate@email.com</div>
+          <div id='kateEmail' class='emailBox'>kalittl@flemingcollege.ca</div>
         </div>
       </div>
       <!-- End of Kate edits -->
@@ -75,7 +75,7 @@
         </p>
         <div class='dropBox'>
           <button id='markButton' onclick='dropdownMark()' class='dropContact'>Contact Information</button>
-          <div id='markEmail' class='emailBox'>kate@email.com</div> 
+          <div id='markEmail' class='emailBox'>mdorries@flemingcollege.ca</div> 
         </div>
       </div>
       <div class= "bioblock">
