fixing html error on projects

--- a/projects.html
+++ b/projects.html
@@ -282,12 +282,10 @@ end menu medium screen-->
     <div class="content">
       <div class="padding-bottom">
         <h1 class='anchor'>Web Design</h1>
-        <p>
           <ul>
             <li>Website design even more impressive than this one</li>
             <li>Responsive websites for desktop and mobile environments</li>
           </ul>
-        </p>
       </div>
     </div>
   </div>
@@ -298,7 +296,7 @@ end menu medium screen-->
 
   <!-- Footer -->
   <footer class="container center">  
-    <div class="xlarge" class='anchor'>
+    <div class="xlarge anchor">
   </div>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
   </footer>
