updates to footer on all pages

--- a/people.html
+++ b/people.html
@@ -98,13 +98,13 @@
 
 
   <div class="container light-grey center">
-      <h4 class="margin xlarge">Cloud 9 Consulting</h4>
+    <p class="margin">Cloud 9 Consulting</p>
   </div>
 
   <!-- Footer -->
   <footer class="container center">  
-    <div class="xlarge">
-    </div>
+    <div class="anchor">
+  </div>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
   </footer>
 
