--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
   </div>
 
   <div class="container light-grey center">
-      <h4 class="margin xlarge">Cloud 9 Consulting</h4>
+    <p class="margin">Cloud 9 Consulting</p>
   </div>
 
   <!-- Footer -->
   <footer class="container center">  
-    <div class="xlarge">
-    </div>
-    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+    <div class="anchor">
+  </div>
+  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
   </footer>
 
 </body>
