changes to index footer

--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
     </div>
   </div>
 
-  <div class="container center">
+  <div class="container light-grey center">
     <p class="margin">Cloud 9 Consulting</p>
   </div>
 
   <!-- Footer -->
-  <footer class="container light-grey center">  
+  <footer class="container center">  
     <div class="anchor">
   </div>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
