--- a/projects.html
+++ b/projects.html
@@ -238,10 +238,9 @@ end menu medium screen-->
     <div class="content">
       <div class="padding-bottom">
         <h1 class='anchor'>Database Modeling</h1>
-          <ul>
-            <li>Database creation or improvement</li>
-            <li>Attempt to reduce normal form violation</li>
-          </ul>
+        <p>Our team is skilled in database design, creating functional and efficient databases to geared
+           towards your specific needs. Consult with us about your data storage requirements, and we will 
+           design a model that will both suit your current needs and plan for future ones as well.</p>
       </div>
     </div>
   </div>
