added some stuff to the web design part of the project page, removed unnecessary elements from CSS file

--- a/projects.html
+++ b/projects.html
@@ -282,9 +282,15 @@ end menu medium screen-->
     <div class="content">
       <div class="padding-bottom">
         <h1 class='anchor'>Web Design</h1>
+        <p>
+          We design modern, intuitive websites that will be sure to make a great first impression on potential clients.
+          Choose from a list of website templates and we will do the rest- our designers can create a tailor-made website
+          that fits your specifications!
+        </p>
           <ul>
             <li>Website design even more impressive than this one</li>
             <li>Responsive websites for desktop and mobile environments</li>
+            <li></li>
           </ul>
       </div>
     </div>
