--- a/projects.html
+++ b/projects.html
@@ -268,10 +268,9 @@ end menu medium screen-->
     <div class="content">
       <div>
         <h1 class='anchor'>Surveying</h1>
-        <ul>
-          <li>Conduct cadastral surveys</li>
-          <li>Creation of survey plans on AutoCAD from survey measurements</li>
-        </ul>
+        <p>Our team is adept in working in AutoCAD to map your survey data clearly and accurately. If need be, our 
+          team is happy to truck the total stations and rods out to the field conduct cadastral surveys as well.
+        Gets us out of the office!</p>
       </div>
     </div>
   </div>
