--- a/projects.html
+++ b/projects.html
@@ -93,61 +93,8 @@
   <!-- end Kazuto ownership-->
 
 <!-- end menu large screen-->
-<!--Mark December 5-->
-<!-- menu medium screen
-<div class='content center hide-large hide-small'>
-  <div class='flex hide-large hide-small'>
-    <div class='thirdWidth'>Web Design</div>
-    <div class='thirdWidth'>Geovisualization</div>
-    <div class='thirdWidth'>Spatial Analysis</div>
-  </div>
 
-  <div class='flex hide-large hide-small'>
-    <a href='#webdesign' class='thirdWidth '>
-      <img src='images/icons_webdesign125.png' alt='computer icon' width='125' height='110'>        
-    </a>
-    <a href='#geovis' class='thirdWidth '>
-      <img src='images/icons_geovis125.png' alt='map icon' width='125' height='100'>    
-    </a>
-    <a href='#spatial' class='thirdWidth '>
-      <img src='images/icons_spatial125.png' alt='vector map icon' width='125' height='103'>
-    </a>
-  </div>
-
-  <div class='flex hide-large hide-small'>
-    <div class='thirdWidth'>Geodesy</div>
-    <div class='thirdWidth'>Database Modeling</div>
-    <div class='thirdWidth'>Remote Sensing</div>
-  </div>
-
-  <div class='flex hide-large hide-small'>
-    <a href='#geodesy' class='thirdWidth '>
-      <img  src='images/icons_geodesy125.png' alt='bumpy globe icon' width='125' height='120'>
-    </a>
-    <a href='#database' class='thirdWidth '> 
-      <img src='images/icons_database125.png' alt='database icon' width='125' height='100'>
-    </a> 
-    <a href='#remote' class = 'thirdWidth '>
-      <img src='images/icons_remote125.png' alt='satellite icon' width='125' height='119'>
-    </a>
-  </div>
-
-
-  <div class='flex hide-large hide-small'>
-    <div class='halfWidth left'>Programming and Automation</div>
-    <div class='halfWidth text-right'>Surveying</div>
-  </div>
-
-  <div class='flex hide-large hide-small'>
-    <a href='#programming' class='halfWidth'>
-      <img src='images/icons_programming125.png' alt='laptop with code icon' width='125' height='90'>
-    </a>
-    <a href='#survey' class='halfWidth'>
-      <img src='images/icons_survey125.png' alt='surveyor with total station icon' width='125' height='126'>
-    </a>
-  </div>
-</div>
-end menu medium screen-->
+<!--Owner Mark December 5-->
 
 <!-- menu on small screen-->
 <div class='content center hide-large hide-medium'>
@@ -219,6 +166,7 @@ end menu medium screen-->
   </div>
 <!-- end of Owner: Kate -->
 
+<!--Owner Mark-->
   <!-- GEOM 102-->
   <div class="container" id='geovis'>
     <div class="content">
@@ -274,6 +222,7 @@ end menu medium screen-->
       </div>
     </div>
   </div>
+<!-- End Owner Mark-->
 
   <!-- GEOM 101-->
   <div class="container" id='webdesign'>
