changes to GEOM 101 and SURV 21

--- a/projects.html
+++ b/projects.html
@@ -268,7 +268,12 @@ end menu medium screen-->
     <div class="content">
       <div>
         <h1 class='anchor'>Surveying</h1>
+        <p>
+          Our veteran surveying crew has years of experience under their belts and will brave the elements to carry out
+          your surveying projects. Our dedicated AutoCAD department will create top quality survey plans from field data.
+        </p>
         <ul>
+          <li>A team of hardened field surveyors who work effectively outdoors in any and all weather conditions</li>
           <li>Conduct cadastral surveys</li>
           <li>Creation of survey plans on AutoCAD from survey measurements</li>
         </ul>
@@ -283,8 +288,9 @@ end menu medium screen-->
         <h1 class='anchor'>Web Design</h1>
         <p>
           We design modern, intuitive websites that will be sure to make a great first impression on potential clients.
-          Choose from a list of website templates and we will do the rest- our designers can create a tailor-made website
-          that fits your specifications!
+          Choose from a list of website templates and we will do the rest - our designers can create a tailor-made website
+          that fits your specifications. Don't let an old, outdated website drag your company image down - contact the Cloud 9 Web Design
+          team today.
         </p>
           <ul>
             <li>Website design even more impressive than this one</li>
