--- a/projects.html
+++ b/projects.html
@@ -237,7 +237,7 @@
           <ul>
             <li>Website design even more impressive than this one</li>
             <li>Responsive websites for desktop and mobile environments</li>
-            <li></li>
+            <li>We even dapple in JavaScript. Impressive eh?</li>
           </ul>
       </div>
     </div>
