--- a/people.html
+++ b/people.html
@@ -97,8 +97,8 @@
   </div> 
 
 
-  <div class="container light-grey center">
-    <p class="margin">Cloud 9 Consulting</p>
+  <div class="container light-grey">
+    <p class="margin center">Cloud 9 Consulting</p>
   </div>
 
   <!-- Footer -->
