--- a/projects.html
+++ b/projects.html
@@ -254,7 +254,7 @@
   </div>
 
   <div class="container light-grey center">
-      <p class="margin">Cloud 9 Consulting</p>
+      <p class="margin center">Cloud 9 Consulting</p>
   </div>
 
   <!-- Footer -->
