--- a/projects.html
+++ b/projects.html
@@ -188,7 +188,12 @@
         <h1 class='anchor'>Database Modeling</h1>
         <p>Our team is skilled in database design, creating functional and efficient databases to geared
            towards your specific needs. Consult with us about your data storage requirements, and we will 
-           design a model that will both suit your current needs and plan for future ones as well.</p>
+           design a model that will both suit your current needs and plan for future ones as well. Our database services can be apploed to:</p>
+           <ul>
+             <li>Spatial Datasets</li>
+             <li>Data Analytics</li>
+             <li>Human Resources</li>
+           </ul>
       </div>
     </div>
   </div>
