change spelling error in projects

--- a/projects.html
+++ b/projects.html
@@ -252,7 +252,7 @@
           <ul>
             <li>Website design even more impressive than this one</li>
             <li>Responsive websites for desktop and mobile environments</li>
-            <li>We even dapple in JavaScript. Impressive eh?</li>
+            <li>We even dabble in JavaScript. Impressive eh?</li>
           </ul>
       </div>
     </div>
