added sources to icons

--- a/projects.html
+++ b/projects.html
@@ -62,13 +62,13 @@
 
     <div class='flex'>
       <a href='#spatial' class='thirdWidth '>
-        <img src='images/icons_spatial125.png' alt='vector map icon' width='125' height='103'>
+        <img src='images/icons_spatial125.png' alt='vector map icon' width='125' height='103'> <!-- source: open source from canva.com (creator: gstudioimagen) -->
       </a>
       <a href='#geovis' class='thirdWidth '>
-        <img src='images/icons_geovis125.png' alt='map icon' width='125' height='100'>    
+        <img src='images/icons_geovis125.png' alt='map icon' width='125' height='100'> <!-- source: open source from canva.com (creator: sketchify) -->   
       </a>
       <a href='#database' class='thirdWidth '> 
-        <img src='images/icons_database125.png' alt='database icons' width='125' height='100'>
+        <img src='images/icons_database125.png' alt='database icons' width='125' height='100'> <!-- source: open source from canva.com (creator: Aimagenarium) -->
       </a> 
     </div>
 
@@ -80,13 +80,13 @@
 
     <div class='flex'>
       <a href='#remote' class = 'thirdWidth'>
-        <img src='images/icons_remote125.png' alt='satellite icon' width='125' height='119'>
+        <img src='images/icons_remote125.png' alt='satellite icon' width='125' height='119'> <!-- source: open source from canva.com (creator: oleksiiafanasiev) -->
       </a>
       <a href='#survey' class='thirdWidth'>
-        <img src='images/icons_survey125.png' alt='surveyor with total station icon' width='125' height='126'>
+        <img src='images/icons_survey125.png' alt='surveyor with total station icon' width='125' height='126'> <!-- source: open source from canva.com (creator: juicyfish) -->
       </a>
       <a href='#webdesign' class='thirdWidth'>
-        <img src='images/icons_webdesign125.png' alt='computer icon' width='125' height='110'>        
+        <img src='images/icons_webdesign125.png' alt='computer icon' width='125' height='110'> <!-- source: open source from canva.com (creator: grmarc) -->       
       </a>
     </div>
   </div>
@@ -105,10 +105,10 @@
 
   <div class='flex hide-large hide-medium'>
     <a href='#spatial' class='halfWidth '>
-      <img src='images/icons_spatial125.png' alt='vector map icon' width='125' height='103'>
+      <img src='images/icons_spatial125.png' alt='vector map icon' width='125' height='103'>  <!-- source: open source from canva.com (creator: gstudioimagen) -->
     </a>
     <a href='#geovis' class='halfWidth '>
-      <img src='images/icons_geovis125.png' alt='map icon' width='125' height='100'>    
+      <img src='images/icons_geovis125.png' alt='map icon' width='125' height='100'> <!-- source: open source from canva.com (creator: sketchify) -->    
     </a>
   </div>
 
@@ -119,10 +119,10 @@
 
   <div class='flex hide-large hide-medium'>
     <a href='#database' class='halfWidth '> 
-      <img src='images/icons_database125.png' alt='three databases icon' width='125' height='100'>
+      <img src='images/icons_database125.png' alt='three databases icon' width='125' height='100'> <!-- source: open source from canva.com (creator: Aimagenarium) -->
     </a> 
     <a href='#remote' class = 'halfWidth '>
-      <img src='images/icons_remote125.png' alt='satellite icon' width='125' height='119'>
+      <img src='images/icons_remote125.png' alt='satellite icon' width='125' height='119'> <!-- source: open source from canva.com (creator: oleksiiafanasiev) -->
     </a>
   </div> 
 
@@ -133,10 +133,10 @@
 
   <div class='flex hide-large hide-medium'>
     <a href='#survey' class='halfWidth '>
-      <img src='images/icons_survey125.png' alt='surveyor with total station icon' width='125' height='126'>
+      <img src='images/icons_survey125.png' alt='surveyor with total station icon' width='125' height='126'> <!-- source: open source from canva.com (creator: juicyfish) -->
     </a>
     <a href='#webdesign' class='halfWidth '>
-      <img src='images/icons_webdesign125.png' alt='computer icon' width='125' height='110'>        
+      <img src='images/icons_webdesign125.png' alt='computer icon' width='125' height='110'> <!-- source: open source from canva.com (creator: grmarc) -->        
     </a>
   </div>
 </div>
