changes to index

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="content text-centered">
       <div>
         <h2>How can we help?</h2>
-        <p></p>
+        <p>Our team of experts are here to help with all of your GIS needs.</p>
       </div>
 
       <div>
@@ -98,6 +98,7 @@
           </a>
         </div>
       </div>
+      <p>Visit our projects page for more services.</p>
     </div>
   </div>
 
