add subheadings on projects and people pages

--- a/people.html
+++ b/people.html
@@ -42,6 +42,7 @@
     <div class="display-middle">
       <!-- Owner: Kate -->
       <h1 class="headertext margin">Who We Are</h1>
+      <p class="hide-medium hide-small center-align xlarge">Our Team</p>
     </div>
   </header>
 
