--- a/projects.html
+++ b/projects.html
@@ -43,6 +43,7 @@
     <div class="display-middle">
       <!-- Owner: Kate -->
       <h1 class="headertext margin">What We Do</h1>
+      <p class="hide-medium hide-small center-align xlarge">Our Services</p>
     </div>
   </header>
 
