index page comments and formatting

--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
       </div>
     </div>
   </div>
-  
+  <!-- End of Owner: Kate -->
+
+  <!-- Owner: Kate -->
+  <!-- inspired by: https://www.cerg.ca/ -->
   <div class="container light-grey center">
     <div class="content text-centered">
       <div>
@@ -116,4 +119,4 @@
 </body>
 </html>
 
-<!-- end of Kate ownership-->
+<!-- End of Owner: Kate -->
