change text on projects page

--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
     <!--modified by Mark Dec 4, 2020-->
   <!-- owner: Kazuto-->
   <div class='content center hide-small'>
-    <h2>Projects Quick Access</h2>
+    <h2>Services</h2>
     <div class='flex'>
       <div class='thirdWidth'>Spatial Analysis</div>
       <div class='thirdWidth'>Geovisualization</div>
