remote sensing image in projects

--- a/projects.html
+++ b/projects.html
@@ -204,8 +204,7 @@
     <div class="content">
       <div class="padding-bottom">
         <h1 class='anchor'>Remote Sensing</h1>
-        <p>We have experience working with all manner of aerial and satellite imagery. Our expertise includes working with:
-        </p>
+        <p>We have experience working with all manner of aerial and satellite imagery. Our expertise includes working with:</p>
           <ul>
             <li>Spectral Index interpretation</li>
             <li>Geocorrection and Orthorectification</li>
@@ -213,6 +212,7 @@
             <li>Multispectral Image Classification (Supervised and Unsupervised)</li>
             <li>Image Enhancement</li>
           </ul>
+        <img src="images/remotesensing.jpg" alt="Geometric Correction" width="400" height="321" class="responsive">
       </div>
     </div>
   </div>
