--- a/projects.html
+++ b/projects.html
@@ -212,7 +212,7 @@
             <li>Multispectral Image Classification (Supervised and Unsupervised)</li>
             <li>Image Enhancement</li>
           </ul>
-        <img src="images/remotesensing.jpg" alt="Geometric Correction" width="400" height="321" class="responsive">
+        <img src="images/RemoteSensing.jpg" alt="Geometric Correction" width="400" height="321" class="responsive">
       </div>
     </div>
   </div>
