--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,7 @@
   <!-- Navbar -->
   <div class="top">
     <div class="bar card left-align large white">
+      <!-- when the "burger" button is clicked a dropdown menu will appear. this button is only visible when the screen is smaller than a certain size -->
       <a class="burger button hide-medium hide-large right padding-large hover-blue large white" href="javascript:void(0);" onclick="dropMenu()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
       <a href="index.html" class="bar-item button padding-large hover-white">Home</a>
       <a href="people.html" class="bar-item button hide-small padding-large hover-white">People</a>
@@ -27,7 +28,7 @@
     </div>
 
   <!-- modified by Kazuto-->
-  <!-- Navbar on small screens -->
+  <!-- dropdown menu on small screens -->
     <div class='left'>
       <div id="SmallNavBar" class="bar-block light-grey hide hide-large hide-medium large">
         <a href="people.html" class="show burger-item padding-large">People</a>
@@ -38,6 +39,7 @@
   </div>
 <!--End of Owner: Kate -->
 
+  <!-- Title image and accompanying text -->
   <header class="container center padding-62-16">
     <img class="image" src="images/Cloud9Consulting4.jpg" alt="Cloud 9 Consulting" width="1500" height="523">
     <div class="display-middle">
@@ -259,15 +261,15 @@
     </div>
   </div>
 
+  <!-- text at bottom stating company name -->
   <div class="container light-grey center">
       <p class="margin center">Cloud 9 Consulting</p>
   </div>
 
   <!-- Footer -->
   <footer class="container center">  
-    <div class="anchor">
-  </div>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+    <div class="anchor"></div>
+    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
   </footer>
 
 </body>
