spelling and gammar checks on projects

--- a/projects.html
+++ b/projects.html
@@ -156,10 +156,10 @@
           municipal needs. Examples of our past projects include: 
         </p>
         <ul>
-          <li>Watermain Break Risk Analysis</li>
-          <li>Flood Plain Analysis</li>
+          <li>Watermain Break Risk Analyses</li>
+          <li>Flood Plain Analyses</li>
           <li>Building Suitability Studies</li>
-          <li>Environmental Risk Analysis</li>            
+          <li>Environmental Risk Analyses</li>            
         </ul>
         <p>Our team can sort through your topographic maps, aerial imagery, and tabular data to produce meaningful spatial
           analyses based on your specifications. Please contact us for more information on how we can help.
@@ -178,7 +178,7 @@
         <p>Our cartography specialists can prepare a variety of reference or thematic maps for reporting, 
           presentations, or displays. We can adapt our maps to suit digital or physical presentation media and
            are able to generalize your data to suit small format for printouts or pamphlets. Talk to us about 
-           your cartographic needs, and we will find ways to present your data clearly and attractively.
+           your cartographic needs, and we will find a way to present your data clearly and attractively.
         </p>
       </div>
     </div>
@@ -189,14 +189,15 @@
     <div class="content">
       <div class="padding-bottom">
         <h1 class='anchor'>Database Modeling</h1>
-        <p>Our team is skilled in database design, creating functional and efficient databases to geared
+        <p>Our team is skilled in database design, creating functional and efficient databases geared
            towards your specific needs. Consult with us about your data storage requirements, and we will 
-           design a model that will both suit your current needs and plan for future ones as well. Our database services can be apploed to:</p>
+           design a model that will both suit your current needs and plan for your future needs as well. Our database services can be apploed to:</p>
            <ul>
              <li>Spatial Datasets</li>
              <li>Data Analytics</li>
              <li>Human Resources</li>
            </ul>
+        <p>Contact us for a free quote.</p>
       </div>
     </div>
   </div>
@@ -208,7 +209,7 @@
         <h1 class='anchor'>Remote Sensing</h1>
         <p>We have experience working with all manner of aerial and satellite imagery. Our expertise includes working with:</p>
           <ul>
-            <li>Spectral Index interpretation</li>
+            <li>Spectral Index Interpretation</li>
             <li>Geocorrection and Orthorectification</li>
             <li>Photogrammetry</li>
             <li>Multispectral Image Classification (Supervised and Unsupervised)</li>
@@ -234,8 +235,8 @@
           <li>Creation of survey plans on AutoCAD from survey measurements</li>
         </ul>
         <p>Our team is adept in working in AutoCAD to map your survey data clearly and accurately. If need be, our 
-          team is happy to truck the total stations and rods out to the field conduct cadastral surveys as well.
-        Gets us out of the office!</p>
+          team is happy to truck the total stations and rods out to the field conduct to cadastral surveys as well.
+        We get out of the office!</p>
       </div>
     </div>
   </div>
